# 19_3_sql_casestudy

./: Makefile  README.md  environment.yml  pyproject.toml
19_3_sql_casestudy/: __init__.py  dataset.py  features.py  plots.py
19_3_sql_casestudy/modeling/: predict.py  train.py
data/raw/: SQLTasks Tier 2.sql
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 19_3_SQLcasestudy.ipynb  SQLTasks_Tier_2_BenoitLoze.sql
